[package]
name = "server_sent_events"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = {version = "1.37.0", features = ["full"]}
tokio-stream = "0.1.15"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["stream"] }
chrono = "0.4.23"

[[bin]]
name = "sse-server"
path = "./src/main.rs"

